# neutrino_sim

./: CMakeLists.txt  README  README.md  commands.txt  exampleN01.cc  neutrino.cc  neutrino_sim.sln  neutrino_sim.vcxproj  neutrino_sim.vcxproj.filters  neutron.cc  simulate.sh  statProcess.sh  stats  stats.cc  vis.mac
include/: ExN01DetectorConstruction.hh  ExN01DetectorConstruction.hh~  ExN01PrimaryGeneratorAction.hh  ExN01PrimaryGeneratorAction.hh~  NeutrinoDetectorConstruction.hh  NeutrinoDetectorMessenger.hh  NeutrinoPrimaryGeneratorAction.hh  NeutrinoSimEventAction.hh  NeutrinoSimPhysicsList.hh  NeutrinoSimTrackingAction.hh  NeutronDetectorConstruction.hh  NeutronDetectorMessenger.hh  NeutronPrimaryGeneratorAction.hh  NeutronSimEventAction.hh  NeutronSimHit.hh  NeutronSimPhysicsList.hh  NeutronSimTrackingAction.hh
src/: ExN01DetectorConstruction.cc  ExN01DetectorConstruction.cc~  ExN01PrimaryGeneratorAction.cc  ExN01PrimaryGeneratorAction.cc~  NeutrinoDetectorConstruction.cc  NeutrinoDetectorMessenger.cc  NeutrinoPrimaryGeneratorAction.cc  NeutrinoSimEventAction.cc  NeutrinoSimPhysicsList.cc  NeutrinoSimTrackingAction.cc  NeutronDetectorConstruction.cc  NeutronDetectorMessenger.cc  NeutronPrimaryGeneratorAction.cc  NeutronSimEventAction.cc  NeutronSimHit.cc  NeutronSimPhysicsList.cc  NeutronSimSD.cc  NeutronSimTrackingAction.cc  materials_better.txt  materials_better.txt~  materials_naive.txt
